--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,7 +1,14 @@
-name: learn-github-actions
+name: Swift
+
 on: [push]
+
 jobs:
-  check-bats-version:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: macos-latest
+
     steps:
-      - run: echo "this is pen"
+      - uses: actions/checkout@v3
+      - name: Build
+        run: swift build
+      - name: Run tests
+        run: swift test
